--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./main.css" />
 </head>
 <body>
+    <button class="reset">Reset the board!</button>
     <div class="etch-border"></div>
     <div class="grid"></div>
     <script src="./main.js"></script>
